// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps correctly sets up changeTab and changeSort 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/groups/foo?s=votes&t=request",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`mapDispatchToProps correctly sets up changeTab and changeSort 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/groups/foo?s=updated&t=offer",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`mapDispatchToProps fetchTopic will call fetchGroupTopic if groupSlug and topicName are in the url 1`] = `
Promise {
  Symbol(async_id_symbol): 269468,
  Symbol(trigger_async_id_symbol): 269446,
  Symbol(destroyed): Object {
    "destroyed": false,
  },
}
`;

exports[`mapDispatchToProps fetchTopic will call fetchTopic if only topicName is in the url 1`] = `
Object {
  "graphql": Object {
    "query": "query ($name: String, $id: ID) {
        topic(name: $name, id: $id) {
          id
          name
          postsTotal
          followersTotal
        }
      }",
    "variables": Object {
      "id": undefined,
      "name": "petitions",
    },
  },
  "meta": Object {
    "extractModel": "Topic",
  },
  "type": "FETCH_TOPIC",
}
`;
